--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,9 @@
         <div class="action-bar">
             <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
             <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946511" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="tel:+919964946511" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
+            <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
+            <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Sales</span></a>
+            <a href="tel:+919964946511" class="action-item"><span class="icon">🔧</span><span>Call Service</span></a>
         </div>
     </div>
 
@@ -63,7 +64,14 @@
                 <div class="service-info">
                     <h3>Visit Showroom</h3>
                     <div class="step-item"><div class="step-text"><strong>Address:</strong><br>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</div></div>
-                    <div class="step-item"><div class="step-text"><strong>Phone:</strong><br>+91 99649 46511</div></div>
+                    
+                    <div class="step-item">
+                        <div class="step-text">
+                            <strong>Sales:</strong> <a href="tel:+919964946512">+91 99649 46512</a><br>
+                            <strong>Service:</strong> <a href="tel:+919964946511">+91 99649 46511</a>
+                        </div>
+                    </div>
+
                     <div class="step-item"><div class="step-text"><strong>Email:</strong><br>tirumalatvs716@gmail.com</div></div>
                 </div>
             </div>
@@ -74,7 +82,12 @@
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
                 <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46511</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div>
+                    <div>
+                        <div class="footer-contact-text">Sales: +91 99649 46512</div>
+                        <div class="footer-contact-text" style="font-size: 0.9em; opacity: 0.9;">Service: +91 99649 46511</div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer-main">
@@ -87,7 +100,7 @@
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
-    <a href="https://wa.me/919964946511" class="whatsapp-float" target="_blank">💬</a>
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
     <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
