--- a/index.html
+++ b/index.html
@@ -68,13 +68,32 @@
         </div>
     </section>
 
-    <div class="container">
-        <div class="action-bar">
-            <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
-            <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Sales</span></a>
-            <a href="tel:+919964946511" class="action-item"><span class="icon">🔧</span><span>Call Service</span></a>
+    <div class="container hotline-section">
+        <div class="hotline-banner">
+            
+            <div class="hotline-left">
+                <div class="hotline-circle">📞</div>
+                <div class="hotline-numbers">
+                    <div class="number-block">
+                        <span>Sales Hotline</span>
+                        <a href="tel:+919964946512">+91 99649 46512</a>
+                    </div>
+                    <div class="number-block">
+                        <span>Service Hotline</span>
+                        <a href="tel:+919964946511">+91 99649 46511</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="hotline-center">
+                Use our hotline for quick get<br>in touch for 24 hours.
+            </div>
+
+            <div class="hotline-right">
+                <img src="assets/tvs-horse.png" alt="TVS Racing" class="tvs-horse-logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <span style="display:none; color:#e31e2d; font-family:'Oswald'; font-size:1.5rem; font-style:italic; font-weight:bold;">TVS Racing 🐎</span>
+            </div>
+
         </div>
     </div>
 
@@ -109,17 +128,8 @@
     <footer>
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
-                <div class="footer-contact-item">
-                    <div class="footer-icon-circle">✉</div>
-                    <div class="footer-contact-text">tirumalatvs716@gmail.com</div>
-                </div>
-                <div class="footer-contact-item">
-                    <div class="footer-icon-circle">📞</div>
-                    <div>
-                        <div class="footer-contact-text">Sales: +91 99649 46512</div>
-                        <div class="footer-contact-text" style="font-size: 0.9em; opacity: 0.9;">Service: +91 99649 46511</div>
-                    </div>
-                </div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">Sales: +91 99649 46512</div></div>
             </div>
         </div>
         <div class="footer-main">
