--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tirumala TVS | Authorized Dealer</title>
+    <link rel="stylesheet" href="css/style.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -70,7 +70,6 @@
 
     <div class="container hotline-section">
         <div class="hotline-banner">
-            
             <div class="hotline-left">
                 <div class="hotline-circle">📞</div>
                 <div class="hotline-numbers">
@@ -84,16 +83,11 @@
                     </div>
                 </div>
             </div>
-
-            <div class="hotline-center">
-                Use our hotline for quick get<br>in touch for 24 hours.
-            </div>
-
+            <div class="hotline-center">Use our hotline for quick get<br>in touch for 24 hours.</div>
             <div class="hotline-right">
                 <img src="assets/tvs-horse.png" alt="TVS Racing" class="tvs-horse-logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                 <span style="display:none; color:#e31e2d; font-family:'Oswald'; font-size:1.5rem; font-style:italic; font-weight:bold;">TVS Racing 🐎</span>
             </div>
-
         </div>
     </div>
 
@@ -129,7 +123,7 @@
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
                 <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">Sales: +91 99649 46512</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div><div class="footer-contact-text">Sales: +91 99649 46512</div><div class="footer-contact-text" style="font-size:0.9em; opacity:0.9;">Service: +91 99649 46511</div></div></div>
             </div>
         </div>
         <div class="footer-main">
