--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tirumala TVS | Authorized Dealer</title>
-    <link rel="stylesheet" href="css/style.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -115,6 +115,61 @@
                 <div class="card"><div class="card-img"><img src="assets/jupiter110.jpg" alt="Jupiter"></div><div class="card-info"><h3>Jupiter 110</h3><a href="models/jupiter113.html" class="btn btn-outline">View Specs</a></div></div>
                 <div class="card"><div class="card-img"><img src="assets/raider.jpg" alt="Raider"></div><div class="card-info"><h3>Raider 125</h3><a href="models/raider.html" class="btn btn-outline">View Specs</a></div></div>
                 <div class="card"><div class="card-img"><img src="assets/ronin.jpg" alt="Ronin"></div><div class="card-info"><h3>TVS Ronin</h3><a href="models/ronin.html" class="btn btn-outline">View Specs</a></div></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-padding" style="background-color: #f4f4f4;">
+        <div class="container">
+            <div class="text-center section-header">
+                <h2>Happy Riders</h2>
+                <p>What our customers say about Tirumala TVS.</p>
+            </div>
+            
+            <div class="grid-3" style="margin-top: 40px;">
+                
+                <div class="review-card">
+                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★★</div>
+                    <p>"Excellent experience buying my new Apache RTR 160 4V. The sales team explained everything clearly."</p>
+                    <h4>– Arjun Kumar</h4>
+                    <span style="font-size:0.85rem; color:#888;">Apache Owner</span>
+                </div>
+
+                <div class="review-card">
+                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★★</div>
+                    <p>"I was confused between Jupiter and Ntorq. The staff helped me decide based on my daily usage."</p>
+                    <h4>– Priya Sharma</h4>
+                    <span style="font-size:0.85rem; color:#888;">Jupiter Owner</span>
+                </div>
+
+                <div class="review-card">
+                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★★</div>
+                    <p>"Best service center in Bidarahalli. Fast, reliable, and they actually listen to the problems."</p>
+                    <h4>– Rahul M.</h4>
+                    <span style="font-size:0.85rem; color:#888;">Service Customer</span>
+                </div>
+
+                <div class="review-card">
+                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★★</div>
+                    <p>"Bought the new iQube Electric. The delivery was on time and the finance process was smooth."</p>
+                    <h4>– Karthik R.</h4>
+                    <span style="font-size:0.85rem; color:#888;">iQube Owner</span>
+                </div>
+
+                <div class="review-card">
+                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★☆</div>
+                    <p>"Very happy with my TVS Raider. The showroom staff at Tirumala are very polite and helpful."</p>
+                    <h4>– Anjali Deshmukh</h4>
+                    <span style="font-size:0.85rem; color:#888;">Raider Owner</span>
+                </div>
+
+                <div class="review-card">
+                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★★</div>
+                    <p>"Got my Ntorq serviced here last week. The bike feels brand new. Highly recommended!"</p>
+                    <h4>– Vikram Singh</h4>
+                    <span style="font-size:0.85rem; color:#888;">Ntorq Owner</span>
+                </div>
+
             </div>
         </div>
     </section>
