--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tirumala TVS | Authorized Dealer</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -28,7 +28,8 @@
                     <li class="nav-item dropdown">
                         <a href="models.html#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/apache160.html">Apache RTR Series</a></li>
+                            <li><a href="models/apache160.html">Apache RTR 160 4V</a></li>
+                            <li><a href="models/apache200.html">Apache RTR 200 4V</a></li>
                             <li><a href="models/raider.html">Raider 125</a></li>
                             <li><a href="models/ronin.html">Ronin</a></li>
                         </ul>
@@ -120,47 +121,51 @@
 
     <section class="section-padding" style="background-color: #f4f4f4;">
         <div class="container">
-            <div class="text-center section-header">
-                <h2>Happy Riders</h2>
-                <p>What our customers say about Tirumala TVS.</p>
-            </div>
-            
+            <div class="text-center section-header"><h2>Happy Riders</h2><p>What our customers say about Tirumala TVS.</p></div>
             <div class="grid-3" style="margin-top: 40px;">
-                <div class="review-card">
-                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★★</div>
-                    <p>"Excellent experience buying my new Apache RTR 160 4V. The sales team explained everything clearly."</p>
-                    <h4>– Arjun Kumar</h4>
-                    <span style="font-size:0.85rem; color:#888;">Apache Owner</span>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Excellent experience buying my new Apache RTR 160 4V."</p><h4>– Arjun Kumar</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"I was confused between Jupiter and Ntorq. The staff helped me decide."</p><h4>– Priya Sharma</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Best service center in Bidarahalli. Fast, reliable."</p><h4>– Rahul M.</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Bought the new iQube. Smooth process."</p><h4>– Karthik R.</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★☆</div><p>"Very happy with my TVS Raider."</p><h4>– Anjali Deshmukh</h4></div>
+                <div class="review-card"><div class="stars" style="color:#f1c40f;">★★★★★</div><p>"Got my Ntorq serviced here. Highly recommended!"</p><h4>– Vikram Singh</h4></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-padding">
+        <div class="container">
+            <div class="text-center section-header"><h2>Awards & Recognition</h2><p>Excellence in every ride we deliver.</p></div>
+            <div class="grid-3" style="margin-top: 40px;">
+                <div class="award-card">
+                    <span class="award-icon">🏆</span>
+                    <h3>IMOTY 2022 Winner</h3>
+                    <p>Indian Motorcycle of the Year - <strong>TVS Raider 125</strong></p>
                 </div>
-                <div class="review-card">
-                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★★</div>
-                    <p>"I was confused between Jupiter and Ntorq. The staff helped me decide based on my daily usage."</p>
-                    <h4>– Priya Sharma</h4>
-                    <span style="font-size:0.85rem; color:#888;">Jupiter Owner</span>
+                <div class="award-card">
+                    <span class="award-icon">🥇</span>
+                    <h3>J.D. Power Award</h3>
+                    <p>Highest in Customer Satisfaction - Two Wheeler Service</p>
                 </div>
-                <div class="review-card">
-                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★★</div>
-                    <p>"Best service center in Bidarahalli. Fast, reliable, and they actually listen to the problems."</p>
-                    <h4>– Rahul M.</h4>
-                    <span style="font-size:0.85rem; color:#888;">Service Customer</span>
+                <div class="award-card">
+                    <span class="award-icon">⭐</span>
+                    <h3>Manufacturer of the Year</h3>
+                    <p>NDTV Car & Bike Awards - TVS Motor Company</p>
                 </div>
-                <div class="review-card">
-                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★★</div>
-                    <p>"Bought the new iQube Electric. The delivery was on time and the finance process was smooth."</p>
-                    <h4>– Karthik R.</h4>
-                    <span style="font-size:0.85rem; color:#888;">iQube Owner</span>
+                <div class="award-card">
+                    <span class="award-icon">🛵</span>
+                    <h3>Most Appealing Scooter</h3>
+                    <p>TVS Scooty Zest 110 - J.D. Power APEAL Award</p>
                 </div>
-                <div class="review-card">
-                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★☆</div>
-                    <p>"Very happy with my TVS Raider. The showroom staff at Tirumala are very polite and helpful."</p>
-                    <h4>– Anjali Deshmukh</h4>
-                    <span style="font-size:0.85rem; color:#888;">Raider Owner</span>
+                <div class="award-card">
+                    <span class="award-icon">🏍️</span>
+                    <h3>Bike of the Year 2021</h3>
+                    <p>Jagran Hi-Tech Awards - TVS Raider</p>
                 </div>
-                <div class="review-card">
-                    <div class="stars" style="color:#f1c40f; margin-bottom:10px;">★★★★★</div>
-                    <p>"Got my Ntorq serviced here last week. The bike feels brand new. Highly recommended!"</p>
-                    <h4>– Vikram Singh</h4>
-                    <span style="font-size:0.85rem; color:#888;">Ntorq Owner</span>
+                <div class="award-card">
+                    <span class="award-icon">✨</span>
+                    <h3>Initial Quality Leader</h3>
+                    <p>Highest Ranked Economy Motorcycle - TVS Star City+</p>
                 </div>
             </div>
         </div>
