--- a/models/apache160.html
+++ b/models/apache160.html
@@ -40,28 +40,42 @@
         <div class="pro-detail-grid">
             
             <div class="pro-text-side">
-                <h2>Overview and Positioning</h2>
+                <h2>Overview</h2>
                 <p>
-                    The <strong>TVS Apache RTR 160 4V</strong> is the benchmark for the 160cc segment. It combines racing-inspired performance with everyday usability. Known for its best-in-class power and technology, it is the top choice for riders who demand excitement from their daily commute.
+                    The <strong>TVS Apache RTR 160 4V</strong> is the most powerful 160cc motorcycle in its segment. Born of Racing DNA, it features a 4-valve oil-cooled engine that delivers best-in-class performance. With SmartXonnect technology and 3 ride modes (Sport, Urban, Rain), it adapts to every road condition.
                 </p>
 
-                <h2>Engine and Performance</h2>
+                <h2>Engine & Performance</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 159.7 cc, single-cylinder, 4-valve, oil-cooled</li>
-                    <li><strong>Maximum Power:</strong> 17.55 PS @ 9250 rpm</li>
-                    <li><strong>Maximum Torque:</strong> 14.73 Nm @ 7250 rpm</li>
-                    <li><strong>Transmission:</strong> 5-speed gearbox with slick shifting</li>
-                    <li><strong>Top Speed:</strong> 114 km/h (Sport Mode)</li>
+                    <li><strong>Engine Type:</strong> SI, 4-stroke, Oil-cooled, SOHC, Fuel Injection</li>
+                    <li><strong>Displacement:</strong> 159.7 cc</li>
+                    <li><strong>Max Power:</strong> 17.55 PS @ 9250 rpm (Sport Mode)</li>
+                    <li><strong>Max Torque:</strong> 14.73 Nm @ 7250 rpm</li>
+                    <li><strong>0-60 km/h:</strong> 4.8 seconds</li>
+                    <li><strong>Top Speed:</strong> 114 km/h</li>
                 </ul>
 
-                <h2>Chassis and Suspension</h2>
+                <h2>Chassis, Brakes & Tyres</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Frame:</strong> Double cradle split synchro stiff frame for high stability</li>
-                    <li><strong>Front Suspension:</strong> Telescopic forks (Showa tuned)</li>
+                    <li><strong>Frame:</strong> Double Cradle Split Synchro Stiff Frame</li>
+                    <li><strong>Front Suspension:</strong> Telescopic Forks (Showa Tuned)</li>
                     <li><strong>Rear Suspension:</strong> Monoshock</li>
+                    <li><strong>Front Brake:</strong> 270mm Petal Disc (Single Channel ABS)</li>
+                    <li><strong>Rear Brake:</strong> 200mm Petal Disc / 130mm Drum</li>
+                    <li><strong>Front Tyre:</strong> 90/90-17 Tubeless</li>
+                    <li><strong>Rear Tyre:</strong> 130/70-17 Tubeless (Radial)</li>
                 </ul>
 
-                <div style="margin-top: 30px;">
+                <h2>Dimensions & Electricals</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Kerb Weight:</strong> 144 kg (Disc) / 146 kg (Drum)</li>
+                    <li><strong>Ground Clearance:</strong> 180 mm</li>
+                    <li><strong>Fuel Tank Capacity:</strong> 12 Litres</li>
+                    <li><strong>Headlamp:</strong> All-New LED Headlamp with DRL</li>
+                    <li><strong>Console:</strong> Fully Digital with Bluetooth Connectivity</li>
+                </ul>
+
+                <div style="margin-top: 40px; margin-bottom: 20px;">
                     <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
                     <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
                 </div>
@@ -69,6 +83,17 @@
 
             <div class="pro-image-side">
                 <img src="../assets/apache160.jpg" alt="Apache 160 4V Side Profile" onerror="this.src='https://placehold.co/800x600?text=Apache+160+Image'">
+                
+                <div style="margin-top: 30px; display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+                    <div style="background: #f9f9f9; padding: 20px; border-radius: 8px; text-align: center;">
+                        <h4 style="font-family:'Oswald'; margin-bottom:5px;">Ride Modes</h4>
+                        <p style="font-size:0.9rem; color:#666;">Rain | Urban | Sport</p>
+                    </div>
+                    <div style="background: #f9f9f9; padding: 20px; border-radius: 8px; text-align: center;">
+                        <h4 style="font-family:'Oswald'; margin-bottom:5px;">SmartXonnect</h4>
+                        <p style="font-size:0.9rem; color:#666;">Call/SMS Alerts & Nav</p>
+                    </div>
+                </div>
             </div>
 
         </div>
