--- a/models/jupiter113.html
+++ b/models/jupiter113.html
@@ -3,53 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Jupiter 110 | Tirumala TVS</title>
+    <title>TVS Jupiter 110 | Tirumala TVS</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+
     <header class="main-header">
         <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
-            <div class="header-btn-group"><a href="../index.html#contact" class="btn-header">Get Quote</a></div>
+            <div class="header-btn-group">
+                <a href="../service.html" class="btn-header">Book Service</a>
+                <a href="../quotation.html" class="btn-header">Get Quotation</a>
+                <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
+            </div>
         </div>
-        <div class="nav-bar">
-            <div class="container"><ul class="nav-menu"><li class="nav-item"><a href="../index.html">Home</a></li><li class="nav-item"><a href="../models.html">Inventory</a></li><li class="nav-item"><a href="../index.html#contact">Contact</a></li></ul></div>
+        <div class="nav-bar" id="navMenu">
+            <div class="container">
+                <ul class="nav-menu">
+                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
+                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
-    <div class="model-hero">
-        <div class="hero-text-side">
-            <span class="model-tag">ZYADA SE BHI ZYADA</span>
-            <h1 class="model-title">New Jupiter 110</h1>
-            <p style="font-size: 1.1rem; color: #555;">India's most loved scooter now with Next-Gen iGO Assist technology.</p>
-            <div class="model-price">₹ 73,700* <br><span>(Ex-Showroom Price)</span></div>
-            <div style="display: flex; gap: 15px;">
-                <a href="../index.html#contact" class="btn btn-primary">Book Test Ride 📅</a>
-                <a href="https://wa.me/919964946512?text=Quote%20Jupiter110" class="btn btn-whatsapp">WhatsApp 💬</a>
-            </div>
+    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
+        <div class="container" style="text-align: center;">
+            <h1 class="model-title" style="color: #1a3b8c;">TVS Jupiter 110</h1>
+            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 73,000*</p>
         </div>
-        <div class="hero-img-side"><img src="../assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/800x600?text=Jupiter+110'"></div>
     </div>
 
-    <div class="spec-grid">
-        <div class="spec-box"><h3>113.3 cc</h3><p>Engine</p></div>
-        <div class="spec-box"><h3>iGO</h3><p>Assist Tech</p></div>
-        <div class="spec-box"><h3>Start</h3><p>Silent Start</p></div>
-        <div class="spec-box"><h3>Metal</h3><p>Body</p></div>
-    </div>
+    <div class="container pro-detail-section">
+        <div class="pro-detail-grid">
+            <div class="pro-text-side">
+                <h2>Overview</h2>
+                <p>The <strong>TVS Jupiter 110</strong> lives up to its promise of "Zyada Ka Fayda". It is India's most comfortable family scooter, offering best-in-class mileage, superior ride quality, and a host of convenient features for daily city commuting.</p>
 
-    <section class="info-section bg-light">
-        <div class="container">
-            <div class="section-header text-center" style="margin-bottom:50px;"><h2>Key Features</h2></div>
-            <div class="info-grid">
-                <div class="feature-card"><h4>iGO Assist</h4><p>Integrated starter generator (ISG) gives an extra power boost for overtaking.</p></div>
-                <div class="feature-card"><h4>Front Fuel Fill</h4><p>External fuel filling for maximum convenience at petrol pumps.</p></div>
-                <div class="feature-card"><h4>Largest Boot Space</h4><p>Enough space to carry two helmets or your daily groceries.</p></div>
+                <h2>Engine & Efficiency</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Engine:</strong> 109.7 cc, single-cylinder, CVTi</li>
+                    <li><strong>Power:</strong> 7.88 PS @ 7500 rpm</li>
+                    <li><strong>Torque:</strong> 8.8 Nm @ 5500 rpm</li>
+                    <li><strong>Mileage:</strong> 15% higher fuel efficiency with ETFi</li>
+                    <li><strong>Transmission:</strong> CVT Automatic</li>
+                </ul>
+
+                <h2>Key Features</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Wheels:</strong> 12-inch Alloy Wheels (Front & Rear)</li>
+                    <li><strong>Comfort:</strong> Telescopic Suspension & Large Leg Space</li>
+                    <li><strong>Convenience:</strong> External Fuel Fill & Mobile Charger</li>
+                    <li><strong>Lighting:</strong> LED Headlamp</li>
+                </ul>
+
+                <div style="margin-top: 40px;">
+                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                </div>
+            </div>
+            <div class="pro-image-side">
+                <img src="../assets/jupiter110.jpg" alt="TVS Jupiter 110" onerror="this.src='https://placehold.co/800x600?text=Jupiter+110+Image'">
             </div>
         </div>
-    </section>
+    </div>
 
-    <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div></footer>
+    <footer>
+        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
+    </footer>
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
 </body>
 </html>
